RESOLVED FIXED311467
CSSTokenizer::consumeEscape() should compute hex value directly instead of using StringBuilder
https://bugs.webkit.org/show_bug.cgi?id=311467
Summary CSSTokenizer::consumeEscape() should compute hex value directly instead of us...
Chris Dumez
Reported 2026-04-04 01:15:25 PDT
CSSTokenizer::consumeEscape() should compute hex value directly instead of using StringBuilder.
Attachments
Chris Dumez
Comment 1 2026-04-04 01:16:53 PDT
EWS
Comment 2 2026-04-04 18:54:05 PDT
Committed 310582@main (5bc716038e4a): <https://commits.webkit.org/310582@main> Reviewed commits have been landed. Closing PR #62025 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-04 18:55:14 PDT
Note You need to log in before you can comment on or make changes to this bug.