CSSTokenizer::consumeEscape() should compute hex value directly instead of using StringBuilder https://bugs.webkit.org/show_bug.cgi?id=311467

Reviewed by Anne van Kesteren.

Avoid allocating a StringBuilder and round-tripping through parseInteger() when
consuming CSS hex escape sequences. Instead, accumulate the code point value
directly using toASCIIHexValue() as each hex digit is consumed.

* Source/WebCore/css/parser/CSSTokenizer.cpp:
(WebCore::CSSTokenizer::consumeEscape):

Canonical link: https://commits.webkit.org/310582@main